styles/pascal.css
.master-container{
  height: 100%;
  max-width: 1500px;
  width: 100%;
  margin-inline: auto;
  flex-direction: column;
}


aside{
  width: 40%;
  max-width: 600px;
  display: flex;
  align-items: center;
  padding: 2em;
  overflow: auto;
}




.aside-main-wrapper{
  height: 100svh;
  align-items: stretch;
}
.main-and-footer-container{
  height: 100%;
   -webkit-overflow-scrolling: touch; /* smooth scrolling on iOS */
    scroll-behavior: smooth; 
    border: 5px solid transparent;
}

ul{
  list-style: none;
}

/*did this because i used h2 for my section headings i want that little space*/
h2{
  margin: 1em 0; 
}


.profile-pic-container{
  border: 1px solid var(--grey);
  box-shadow: 3px 3px 5px var(--grey);
  width: 100px;  /* min 100px, scales with 20vw, max 200px */
  height: 100px; 
  aspect-ratio: 1/1;
  margin: 1em;
  border-radius: .5rem;
  overflow: hidden;
}
@media (max-width: 320px) {
  .profile-pic-container {
    width: 100px;
    height: 100px ;
  }
  aside{
    margin-top: 5em;
  }
}

.hire-me-btn{
  border-radius: .5rem;
  padding: .7em;
  transform: all 350ms ease;
}
/* this didnt work  */
.hire-me-btn:hover{
  transform: translateY(-5px);
}
/* but this did i know css is weird */
a{
  transition: all 250ms ease;
}


.intro-btn-container{
  padding: 1em;
  justify-content: end;
}

.intro-btn-container a{
  border-radius: .5rem;
  padding: .7em;
  transform: all 350ms ease;
  margin: .25em;
  cursor: pointer;
}
#get-to-know-me-link:hover{
  opacity: .8;
}
#get-to-know-me-link:active{
  opacity: .6;
}

.why-hire-me-container{
  padding-left: 1em;
  display: flex;
  flex-direction: column;
  gap:.5em;
}

.why-hire-me-container span{
  font-size: clamp(0.9rem, 2vw, 1rem);
}

.project-story-container-section{
  padding: 2em  1em;
}

.project-story-container-section::before{
  content: '';
  position: absolute;
  width: 50%;
  height: 5px;
  border-radius: 2rem;
  background-color: var(--blue-dark);
  top: 0;
  left: 0;
}

.project-story-container-section::after{
  content: '';
  position: absolute;
  width: 50%;
  height: 5px;
  border-radius: 2rem;
  background-color: var(--blue-dark);
  bottom: 0;
  right: 0;
}



/* ==================== PROJECT SECTION ===========*/
.project-container{
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
  place-items: center;
  align-items: center;
  gap: 1em;
  padding: 2.5em .5;
  position: relative;
}

.project-card{
  width: 100%;
  max-width: 330px;
  background-color: var(--white);
  border: .5px solid var(--grey);
  padding: .5em .8em;
  height: 450px;
  border-radius: .5rem;
  transition: all 300ms ease;
  display: flex;
  flex-direction: column;
}
.project-card:hover{
  transform: translateY(-10px);
  box-shadow: 1px 1px 3px var(--grey);
}


.project-card figure{
  height: 230px;
  background-color: var(--blue);
  border: 1px solid var(--grey);
  cursor: pointer;
}

.project-description{
  font-size: .9rem;
  display: -webkit-box;
  -webkit-line-clamp: 4; 
  -webkit-box-orient: vertical;  
  overflow: hidden;
}

.project-card figure{
  border-radius: .4rem;
  margin-bottom: .5em;
}

.project-tools-list{
  display: flex;
  flex-wrap: wrap;
  margin: .5em 0;
}
.project-tools-list li{
  font-size: .8rem;
  margin: .25em;
  padding: .25em .4em;
  border-radius: 2rem;
  background-color: var(--blue);
  color: var(--blue-dark);

}

.view-project-btn-container{
  padding: .3em;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.view-project-btn-container a{
  padding: .5em .9em;
  border-radius: .5rem;
  font-size: .8em;
}
.view-project-btn-container button{
    padding: .5em .9em;
  border-radius: .5rem;
  font-size: .8em;
}


/* =========== EXPERIENCE CSS ============= */
.experience-list{
  width: 100%;
  max-width: 800px;
  margin-inline: auto;
}

.experience-list li{
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: .25em ;
  flex-wrap: wrap;
  word-break: break-all;
}

.company-name{
  background-color: var(--black);
  font-weight: 300;
  color: var(--white);
  /* padding: .5em; */
  border-radius: .5rem;
}

/* ==============TOOLS ========= */
.tools-section{
  background-image: url('/asset/black-abstract-background.jpg');
  background-position: center;
  background-size: cover;
}
.tools-section button{
  box-shadow: none;
}

/* ==========CONTACT ME SCRIPTS======== */

textarea, input::placeholder{
  font-weight: 600;
  font-family: var(--font-ui-alt);
}

#contact-me-form{
  width: 100%;
  max-width: 500px;
  margin-inline: auto;
  margin-top: 2em;
  display: flex;
  gap: 1em;
}

#contact-me-form input, textarea{
  width: 100%;
  margin-inline: .5em;
  padding: 1em 1.5em;
  border-radius: .5rem;
  border: 1px solid var(--grey);
}

/* message text area */
#message{
  resize: none;
  height: 150px;
}

.contact-me-btn{
  background-image: url('/asset/black-abstract-background.jpg');
  background-position: center;
  background-size: cover;
  overflow: hidden; /* hide when icon moves outside */
  position: relative; /* needed for absolute child */
}

.moving-icon {
  animation: slide 2.5s linear infinite;
}

@keyframes slide {
  from {
    transform:  translateX(0%);
  }
  to {
    transform:  translateX(200%);
  }
  
}

/* ============  sections Js observer classlist*/
section{
 transform: translateY(40px);
 opacity: .5;
 transition:all 1s ease;
}


.fade-in-up {
  opacity: 1;
  transform: translateY(0px);
  animation:all 1s ease;
}






/* media queries */
@media(max-width: 1100px){
  .aside-main-wrapper{
    flex-direction: column;
    overflow: auto;
    width: 100%;
    border: 2px solid ;
    height: auto;
  }

  aside{
    width: 100%;
    max-width: 100%;
    height: 100svh;
    padding-top: 0;
    padding-bottom: 0;
  }
  aside >*{
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    height: 100%;
    min-height: 600px;  
    padding-top: 4em;
  }
  h2{
    text-align: center;
  }
}

@media only screen and (max-width: 768px) and (orientation: landscape) {
 aside{
  height: auto;
 }
}

